--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <div id="main" role="main">
       <h1>Sky Moynihan</h1>
       <p>Gitting gud at GitHub.</p>
+      <h2>Scratch Game</h2>
+      <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
+      </p>
     </div>
   </body>
 </html>
