--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Portfolio</title>
   </head>
   <body class="index">
-    <div id="main" role="main">
+    <div> id="main" role="main">
       <h1>Sky Moynihan</h1>
       <p>Gitting gud at GitHub.</p>
-      <h2>Scratch Game: Run The Red</h2>
+      <br><h2>Scratch Game: Run The Red</h2></br>
       <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
       </p>
     </div>
