--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
   </head>
   <body class="index">
-    <div> id="main" role="main">
+    <div id="main" role="main">
       <h1>Sky Moynihan</h1>
       <p>Gitting gud at GitHub.</p>
       <br><h2>Scratch Game: Run The Red</h2></br>
