--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Sky Moynihan</h1>
+      <ul>
+        <li><a href="CS_160/index.html"></a></li>
+      </ul>
       <p>Gitting gud at GitHub.</p>
       <br><h2>Scratch Game: Run The Red</h2></br>
       <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
