--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="main" role="main">
       <h1>Sky Moynihan</h1>
       <ul>
-        <li><a href="CS_160/index.html"></a></li>
+        <li><a href="CS_160/index.html">CS 160</a></li>
       </ul>
       <p>Gitting gud at GitHub.</p>
       <br><h2>Scratch Game: Run The Red</h2></br>
