--- a/CIS 160/Scratch Programs/index.htm
+++ b/CIS 160/Scratch Programs/index.htm
@@ -1,3 +1,6 @@
-<h1>Scratch Game: Run The Red</h1>
+ <ul>
+ <li><a href="CS_160/index.html">CS 160</a></li>
+ </ul>
+  <h1>Scratch Game: Run The Red</h1>
       <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
       </p>
