--- a/CIS 160/Scratch Programs/index.htm
+++ b/CIS 160/Scratch Programs/index.htm
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>Portfolio</title>
+    <title>CS 160</title>
   </head>
   <body class="index">
     <div id="main" role="main">
-      <h1>Sky Moynihan</h1>
       <ul>
         <li><a href="CS_160/index.html">CS 160</a></li>
-        <p>Gitting gud at GitHub.</p>
-        <br><h2>Scratch Game: Run The Red</h2></br>
+        <br><h1>Scratch Game: Run The Red</h1></br>
         <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
         </p>
       </ul>
