--- a/CS_160/Scratch Programs/index.htm
+++ b/CS_160/Scratch Programs/index.htm
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>CS 160</title>
+    <title>Scratch</title>
   </head>
   <body class="index">
     <div id="main" role="main">
       <ul>
-        <li><a href="CS_160/index.html">CS 160</a></li>
+        <li><a href="Scratch Programs">Scratch Programs</a></li>
         <br><h1>Scratch Game: Run The Red</h1></br>
         <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
         </p>
