--- a/CS_160/Scratch Programs/index.htm
+++ b/CS_160/Scratch Programs/index.htm
@@ -8,7 +8,7 @@
   <body class="index">
     <div id="main" role="main">
       <ul>
-        <li><a href="Scratch Programs">Scratch Programs</a></li>
+        <li><a href="Scratch Programs/index.html">Scratch Programs</a></li>
         <br><h1>Scratch Game: Run The Red</h1></br>
         <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
         </p>
