--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
       <h1>Sky Moynihan</h1>
       <ul>
         <p>Gitting gud at GitHub</p>
-        <br><li><a href="CS_160/index.html">CS 160</a></li></ul></br>
+        <br><li><a href="CS_160/index.html">CS_160</a></li></ul></br>
         <br><h2>Scratch Game: Run The Red</h2></br>
         <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
         </p>
       </ul>
+      <head>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        </head>
     </div>
   </body>
 </html>
