--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -8,8 +8,8 @@
   <body class="index">
     <div id="main" role="main">
       <ul>
-        <p>CS 160</p>
-        <br><li><a href="CS_160/index.html">CS_160</a></li></ul></br>
+        <p>Scratch Programs</p>
+        <br><li><a href="Scratch Programs/index.html">Scratch Programs</a></li></ul></br>
         <br><h2>Scratch Game: Run The Red</h2></br>
       
       </ul>
