--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>CS 160</title>
+    <title>Scratch Programs</title>
   </head>
   <body class="index">
     <div id="main" role="main">
       <ul>
         <p>Scratch Programs</p>
         <br><li><a href="Scratch Programs/index.html">Scratch Programs</a></li></ul></br>
-        <br><h2>Scratch Game: Run The Red</h2></br>
-      
       </ul>
       <head>
         <link rel="stylesheet" type="text/css" href="styles.css">
