--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body class="index">
     <div id="main" role="main">
-      <h1>Sky Moynihan</h1>
+      <h1 style="text-align:right;">Sky Moynihan</h1>
       <ul>
-        <p>Gitting gud at GitHub</p>
+        <p style="text-align:center;">Gitting gud at GitHub</p>
         <br><li><a href="CS_160/index.html">CS_160</a></li></ul></br>
         <br><h2>Scratch Game: Run The Red</h2></br>
         <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
