Finishing Touches, THANKS

--- a/CS_160/Scratch Programs/index.html
+++ b/CS_160/Scratch Programs/index.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="/screen.css" media="screen" rel="stylesheet" type="text/css" />
     <title>Scratch</title>
   </head>
   <body class="index">
     <div id="main" role="main">
       <ul>
-        <li><a href="Scratch Programs/index.html">Scratch Programs</a></li>
         <br><h1>Scratch Game: Run The Red</h1></br>
         <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
         </p>
