--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>Scratch Programs</title>
-  </head>
-  <body class="index">
-    <div id="main" role="main">
-      <ul>
-        <p>Scratch Programs</p>
-        <br><li><a href="Scratch Programs/index.html">Scratch Programs</a></li></ul></br>
-      </ul>
-      <head>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        </head>
-    </div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link href="/screen.css" media="screen" rel="stylesheet" type="text/css" />
+  <title>CS 160</title>
+</head>
+
+<body class="index">
+  <div id="main" role="main">
+    <h1>CS 160</h1>
+    <ul>
+      <li>
+        <a href="Scratch Programs/index.html">Scratch Programs</a>
+      </li>
+    </ul>
+
+    <head>
+      <link rel="stylesheet" type="text/css" href="styles.css">
+    </head>
+  </div>
+</body>
+
 </html>
