--- a/CS_160/Book Answers/index.html
+++ b/CS_160/Book Answers/index.html
@@ -6,11 +6,7 @@
 <body>
 
 <h1>Answers to Book Questions</h1>
-<p>Dreaming in Code, and CODE</p>
-
-<ul>
-<a href="BookAnswers/index.html">Book Answers</a> 
-</ul>
+<h2>Dreaming in Code, and CODE</h2>
 
 <p>
 <a href="https://docs.google.com/document/d/19CYCMdyv80X0bV-JLuUtO7g5mLDBsiKWLQ39z0ubxX4/edit?usp=sharing">Dreaming in Code</a>
