--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>Portfolio</title>
-  </head>
-  <body class="index">
-    <div id="main" role="main">
-      <h1 style="text-align:right;">Sky Moynihan</h1>
-      <ul>
-        <p style="text-align:center;">Gitting gud at GitHub</p>
-        <br><li><a href="CS_160/index.html">CS_160</a></li></ul></br>
-        <br><li><a href="/CS_160/Book Answers/index.html">Book Answers</a></li></ul></br>
-        <br><h2>Scratch Game: Run The Red</h2></br>
-        <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
-        </p>
-      </ul>
-      <head>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        </head>
-    </div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
+  <title>Portfolio</title>
+</head>
+
+<body class="index">
+  <div id="main" role="main">
+    <p style="text-align:right;">Sky Moynihan</p>
+    <h1 style="text-align:center;">Gitting gud at GitHub</h1>
+    <ul>
+      <li>
+        <a href="CS_160/index.html">CS_160</a>
+      </li>
+      <li>
+        <a href="/CS_160/Book Answers/index.html">Book Answers</a>
+      </li>
+    </ul>
+
+    <br/>
+    <h2>Scratch Game: Run The Red</h2>
+
+    <p>
+      <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false"
+        frameborder="0" allowfullscreen></iframe>
+    </p>
+  
+  </div>
+</body>
+
 </html>
