--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="index">
   <div id="main" role="main">
     <p style="text-align:right;">Sky Moynihan</p>
-    <h1 style="text-align:center;">Gitting gud at GitHub</h1>
+    <h1>Gitting gud at GitHub</h1>
     <ul>
       <li>
         <a href="CS_160/index.html">CS_160</a>
