--- a/CS_160/Book Answers/index.html
+++ b/CS_160/Book Answers/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Book Answers</title>
+  <title>Book Answers</title>
+  <link href="/screen.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
 
-<h1>Answers to Book Questions</h1>
-<h2>Dreaming in Code, and CODE</h2>
+  <h1>Answers to Book Questions</h1>
+  <h2>Dreaming in Code, and CODE</h2>
 
-<p>
-<a href="https://docs.google.com/document/d/19CYCMdyv80X0bV-JLuUtO7g5mLDBsiKWLQ39z0ubxX4/edit?usp=sharing">Dreaming in Code</a>
-</p>
+  <p>
+    <a href="https://docs.google.com/document/d/19CYCMdyv80X0bV-JLuUtO7g5mLDBsiKWLQ39z0ubxX4/edit?usp=sharing">Dreaming in Code</a>
+  </p>
 
-<p>
-<a href="url">CODE</a>
-</p>
+  <p>
+    <a href="url">CODE</a>
+  </p>
 
 </body>
+
 </html>
