--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -14,6 +14,9 @@
       <li>
         <a href="Scratch Programs/index.html">Scratch Programs</a>
       </li>
+      <li>
+          <a href="/CS_160/Book Answers/index.html">Book Answers</a>
+        </li>
     </ul>
 
     <head>
