--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
       <li>
         <a href="CS_160/index.html">CS_160</a>
       </li>
-      <li>
-        <a href="/CS_160/Book Answers/index.html">Book Answers</a>
-      </li>
     </ul>
 
     <br/>
-    <h2>Scratch Game: Run The Red</h2>
+    <h2>Featured Content</h2>
 
     <p>
       <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false"
