--- a/CS_160/Scratch Programs/index.html
+++ b/CS_160/Scratch Programs/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <link href="/screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>Scratch</title>
-  </head>
-  <body class="index">
-    <div id="main" role="main">
-      <ul>
-        <br><h1>Scratch Game: Run The Red</h1></br>
-        <p> <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false" frameborder="0" allowfullscreen></iframe>
-        </p>
-      </ul>
-    </div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link href="/screen.css" media="screen" rel="stylesheet" type="text/css" />
+  <title>Scratch</title>
+</head>
+
+<body class="index">
+  <div id="main" role="main">
+    <br/>
+    <h1>Scratch Game: Run The Red</h1>
+    <p>
+      <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false"
+        frameborder="0" allowfullscreen></iframe>
+    </p>
+    <br/>
+    <h1>Traverse The Field</h1>
+    <p>
+      <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249434944/?autostart=false"
+        frameborder="0" allowfullscreen></iframe>
+    </p>
+  </div>
+</body>
+
 </html>
