--- a/index.html
+++ b/index.html
@@ -19,11 +19,10 @@
     </ul>
 
     <br/>
-    <h2>Featured Content</h2>
+    <h2>New Featured Content</h2>
 
     <p>
-      <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false"
-        frameborder="0" allowfullscreen></iframe>
+        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249434944/?autostart=false" frameborder="0" allowfullscreen></iframe>
     </p>
   
   </div>
