--- a/CS_160/Scratch Programs/index.html
+++ b/CS_160/Scratch Programs/index.html
@@ -9,14 +9,15 @@
 
 <body class="index">
   <div id="main" role="main">
+    <h1>Scratch Games</h1>
     <br/>
-    <h1>Scratch Game: Run The Red</h1>
+    <h2>Run The Red</h2>
     <p>
       <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249305266/?autostart=false"
         frameborder="0" allowfullscreen></iframe>
     </p>
     <br/>
-    <h1>Traverse The Field</h1>
+    <h2>Traverse The Field</h2>
     <p>
       <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249434944/?autostart=false"
         frameborder="0" allowfullscreen></iframe>
