--- a/CS_160/Book Answers/index.html
+++ b/CS_160/Book Answers/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <title>Book Answers</title>
+  <meta charset="utf-8" />
   <link href="/screen.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-  <br/>
   <h1>Answers to Book Questions</h1>
   <h2>Dreaming in Code, and CODE</h2>
 
