--- a/CS_160/Scratch Programs/index.html
+++ b/CS_160/Scratch Programs/index.html
@@ -22,6 +22,11 @@
       <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249434944/?autostart=false"
         frameborder="0" allowfullscreen></iframe>
     </p>
+      <br/>
+      <h2>Fetch</h2>
+      <p>
+          <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/248720800/?autostart=false" frameborder="0" allowfullscreen></iframe>
+    </p>
   </div>
 </body>
 
