Adding "Colleges" link

--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -17,6 +17,9 @@
       <li>
           <a href="/CS_160/Book Answers/index.html">Book Answers</a>
         </li>
+        <li>
+            <a href="/CS_160/Colleges/index.html">Colleges</a>
+          </li>
     </ul>
 
     <head>
