--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -20,6 +20,9 @@
         <li>
             <a href="/CS_160/Colleges/index.html">Colleges</a>
           </li>
+          <li>
+            <a href="/CS_160/Apps/index.html">Apps</a>
+          </li>
     </ul>
 
     <head>
