--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -11,6 +11,9 @@
   <div id="main" role="main">
     <h1>CS 160</h1>
     <ul>
+        <li>
+            <a href="/CS_160/R,P,S/index.html">ROCK PAPER SCISSORS</a>
+          </li>
       <li>
         <a href="Scratch Programs/index.html">Scratch Programs</a>
       </li>
