--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <h2>New Featured Content</h2>
 
     <p>
-        <iframe allowtransparency="true" width="485" height="402" src="//scratch.mit.edu/projects/embed/249434944/?autostart=false" frameborder="0" allowfullscreen></iframe>
-    </p>
-  
+        <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/VibrantStupendousAddons?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+    <p/>
+    
   </div>
 </body>
 
