--- a/CS_160/Apps/index.html
+++ b/CS_160/Apps/index.html
@@ -13,6 +13,18 @@
   <h2>Created Apps</h2>
 
   <p>
+    <!-- copy and paste. Modify height and width if desired. -->
+ <object id="scPlayer"  width="1917" height="986" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf" >
+  <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf" />
+  <param name="quality" value="high" />
+  <param name="bgcolor" value="#FFFFFF" />
+  <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/FirstFrame.jpg&containerwidth=1917&containerheight=986&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/2018-10-26_Calculator1.swf&blurover=false" />
+  <param name="allowFullScreen" value="true" />
+  <param name="scale" value="showall" />
+  <param name="allowScriptAccess" value="always" />
+  <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/" />
+  Unable to display content. Adobe Flash is required.
+ </object>
     <a href="Link">Apps</a>
   </p>
 
