--- a/CS_160/Apps/index.html
+++ b/CS_160/Apps/index.html
@@ -25,6 +25,18 @@
   <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/" />
   Unable to display content. Adobe Flash is required.
  </object>
+ <!-- copy and paste. Modify height and width if desired. -->
+ <object id="scPlayer"  width="1920" height="942" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/jingswfplayer.swf" >
+  <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/jingswfplayer.swf" />
+  <param name="quality" value="high" />
+  <param name="bgcolor" value="#FFFFFF" />
+  <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/FirstFrame.jpg&containerwidth=1920&containerheight=942&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/2018-10-26_Calculator2.swf&blurover=false" />
+  <param name="allowFullScreen" value="true" />
+  <param name="scale" value="showall" />
+  <param name="allowScriptAccess" value="always" />
+  <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/" />
+  Unable to display content. Adobe Flash is required.
+ </object>
     <a href="Link">Apps</a>
   </p>
 
