taking embed out of paragraph

--- a/CS_160/Apps/index.html
+++ b/CS_160/Apps/index.html
@@ -12,7 +12,6 @@
   <h1>Apps</h1>
   <h2>Created Apps</h2>
 
-  <p>
     <!-- copy and paste. Modify height and width if desired. -->
  <object id="scPlayer"  width="1917" height="986" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf" >
   <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf" />
@@ -35,7 +34,8 @@
   <param name="allowScriptAccess" value="always" />
   <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/" />
  </object>
-    <a href="Link">Apps</a>
+  <p>
+    <a href="Link"></a>
   </p>
 
 </body>
