Reorganizing App Videos

--- a/CS_160/Apps/index.html
+++ b/CS_160/Apps/index.html
@@ -11,29 +11,15 @@
 
   <h1>Apps</h1>
   <h2>Created Apps</h2>
+  
+  <body class="index">
+      <div id="main" role="main">
+        <ul>
+          <li>
+            <a href="/Apps/App Videos/index.html">App Videos</a>
+          </li>
+        </ul>
 
-    <!-- copy and paste. Modify height and width if desired. -->
- <object id="scPlayer"  width="1017" height="586" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf" >
-  <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf" />
-  <param name="quality" value="high" />
-  <param name="bgcolor" value="#FFFFFF" />
-  <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/FirstFrame.jpg&containerwidth=1917&containerheight=986&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/2018-10-26_Calculator1.swf&blurover=false" />
-  <param name="allowFullScreen" value="true" />
-  <param name="scale" value="showall" />
-  <param name="allowScriptAccess" value="always" />
-  <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/" />
- </object>
- <!-- copy and paste. Modify height and width if desired. -->
- <object id="scPlayer"  width="1020" height="542" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/jingswfplayer.swf" >
-  <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/jingswfplayer.swf" />
-  <param name="quality" value="high" />
-  <param name="bgcolor" value="#FFFFFF" />
-  <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/FirstFrame.jpg&containerwidth=1920&containerheight=942&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/2018-10-26_Calculator2.swf&blurover=false" />
-  <param name="allowFullScreen" value="true" />
-  <param name="scale" value="showall" />
-  <param name="allowScriptAccess" value="always" />
-  <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/" />
- </object>
   <p>
     <a href="Link"></a>
   </p>
