--- a/CS_160/Apps/App Videos/index.html
+++ b/CS_160/Apps/App Videos/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Apps</title>
+  <title>App Videos</title>
   <meta charset="utf-8" />
   <link href="/screen.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
