--- a/CS_160/Apps/App Videos/index.html
+++ b/CS_160/Apps/App Videos/index.html
@@ -45,6 +45,17 @@
         <param name="allowScriptAccess" value="always" />
         <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/" />
       </object>
+      <!-- copy and paste. Modify height and width if desired. -->
+    <object id="scPlayer"  width="1920" height="942" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/jingswfplayer.swf" >
+      <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/jingswfplayer.swf" />
+      <param name="quality" value="high" />
+      <param name="bgcolor" value="#FFFFFF" />
+      <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/FirstFrame.jpg&containerwidth=1920&containerheight=942&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/2018-10-27_Calulator4.swf&blurover=false" />
+      <param name="allowFullScreen" value="true" />
+      <param name="scale" value="showall" />
+      <param name="allowScriptAccess" value="always" />
+      <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/" />
+    </object>
 
   <p>
     <a href="Link"></a>
