--- a/CS_160/Apps/index.html
+++ b/CS_160/Apps/index.html
@@ -16,7 +16,7 @@
       <div id="main" role="main">
         <ul>
           <li>
-            <a href="/Apps/App Videos/index.html">App Videos</a>
+            <a href="/CS_160/Apps/App Videos/index.html">App Videos</a>
           </li>
         </ul>
 
