Sorting and Making Things Show Up

--- a/CS_160/Apps/App Videos/index.html
+++ b/CS_160/Apps/App Videos/index.html
@@ -12,50 +12,62 @@
   <h1>App Videos</h1>
   <h2>Calculator App</h2>
 
-      <!-- copy and paste. Modify height and width if desired. -->
-      <object id="scPlayer"  width="1017" height="586" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf" >
-        <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf" />
-        <param name="quality" value="high" />
-        <param name="bgcolor" value="#FFFFFF" />
-        <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/FirstFrame.jpg&containerwidth=1917&containerheight=986&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/2018-10-26_Calculator1.swf&blurover=false" />
-        <param name="allowFullScreen" value="true" />
-        <param name="scale" value="showall" />
-        <param name="allowScriptAccess" value="always" />
-        <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/" />
-       </object>
-       <!-- copy and paste. Modify height and width if desired. -->
-       <object id="scPlayer"  width="1020" height="542" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/jingswfplayer.swf" >
-        <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/jingswfplayer.swf" />
-        <param name="quality" value="high" />
-        <param name="bgcolor" value="#FFFFFF" />
-        <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/FirstFrame.jpg&containerwidth=1920&containerheight=942&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/2018-10-26_Calculator2.swf&blurover=false" />
-        <param name="allowFullScreen" value="true" />
-        <param name="scale" value="showall" />
-        <param name="allowScriptAccess" value="always" />
-        <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/" />
-       </object>
-       <!-- copy and paste. Modify height and width if desired. -->
-      <object id="scPlayer"  width="1020" height="542" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/jingswfplayer.swf" >
-        <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/jingswfplayer.swf" />
-        <param name="quality" value="high" />
-        <param name="bgcolor" value="#FFFFFF" />
-        <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/FirstFrame.jpg&containerwidth=1920&containerheight=942&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/2018-10-27_Calculator3.swf&blurover=false" />
-        <param name="allowFullScreen" value="true" />
-        <param name="scale" value="showall" />
-        <param name="allowScriptAccess" value="always" />
-        <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/" />
-      </object>
-      <!-- copy and paste. Modify height and width if desired. -->
-    <object id="scPlayer"  width="1920" height="942" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/jingswfplayer.swf" >
-      <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/jingswfplayer.swf" />
-      <param name="quality" value="high" />
-      <param name="bgcolor" value="#FFFFFF" />
-      <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/FirstFrame.jpg&containerwidth=1920&containerheight=942&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/2018-10-27_Calulator4.swf&blurover=false" />
-      <param name="allowFullScreen" value="true" />
-      <param name="scale" value="showall" />
-      <param name="allowScriptAccess" value="always" />
-      <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/" />
-    </object>
+  <!-- copy and paste. Modify height and width if desired. -->
+  <object id="scPlayer" width="1017" height="586" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf">
+    <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/jingswfplayer.swf"
+    />
+    <param name="quality" value="high" />
+    <param name="bgcolor" value="#FFFFFF" />
+    <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/FirstFrame.jpg&containerwidth=1917&containerheight=986&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/2018-10-26_Calculator1.swf&blurover=false"
+    />
+    <param name="allowFullScreen" value="true" />
+    <param name="scale" value="showall" />
+    <param name="allowScriptAccess" value="always" />
+    <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/6688cf39-d513-49b3-be15-ac7c55c61d8b/"
+    />
+  </object>
+  <!-- copy and paste. Modify height and width if desired. -->
+  <object id="scPlayer" width="1020" height="542" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/jingswfplayer.swf">
+    <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/jingswfplayer.swf"
+    />
+    <param name="quality" value="high" />
+    <param name="bgcolor" value="#FFFFFF" />
+    <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/FirstFrame.jpg&containerwidth=1920&containerheight=942&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/2018-10-26_Calculator2.swf&blurover=false"
+    />
+    <param name="allowFullScreen" value="true" />
+    <param name="scale" value="showall" />
+    <param name="allowScriptAccess" value="always" />
+    <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f4b09103-9771-432a-8f58-bd6aae5215e8/"
+    />
+  </object>
+  <!-- copy and paste. Modify height and width if desired. -->
+  <object id="scPlayer" width="1020" height="542" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/jingswfplayer.swf">
+    <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/jingswfplayer.swf"
+    />
+    <param name="quality" value="high" />
+    <param name="bgcolor" value="#FFFFFF" />
+    <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/FirstFrame.jpg&containerwidth=1920&containerheight=942&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/2018-10-27_Calculator3.swf&blurover=false"
+    />
+    <param name="allowFullScreen" value="true" />
+    <param name="scale" value="showall" />
+    <param name="allowScriptAccess" value="always" />
+    <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/996bb262-39b3-44f0-8319-b0cbed8230d3/"
+    />
+  </object>
+  <!-- copy and paste. Modify height and width if desired. -->
+  <object id="scPlayer" width="1920" height="942" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/jingswfplayer.swf">
+    <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/jingswfplayer.swf"
+    />
+    <param name="quality" value="high" />
+    <param name="bgcolor" value="#FFFFFF" />
+    <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/FirstFrame.jpg&containerwidth=1920&containerheight=942&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/2018-10-27_Calulator4.swf&blurover=false"
+    />
+    <param name="allowFullScreen" value="true" />
+    <param name="scale" value="showall" />
+    <param name="allowScriptAccess" value="always" />
+    <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/f9b8948d-7c48-43c9-82d2-9d66961ead7d/"
+    />
+  </object>
 
   <p>
     <a href="Link"></a>
@@ -64,4 +76,3 @@
 </body>
 
 </html>
-    
