--- a/CS_160/Apps/index.html
+++ b/CS_160/Apps/index.html
@@ -11,19 +11,19 @@
 
   <h1>Apps</h1>
   <h2>Created Apps</h2>
-  
+
   <body class="index">
-      <div id="main" role="main">
-        <ul>
-          <li>
-            <a href="/CS_160/Apps/App Videos/index.html">App Videos</a>
-          </li>
-        </ul>
+    <div id="main" role="main">
+      <ul>
+        <li>
+          <a href="/CS_160/Apps/App Videos/index.html">App Videos</a>
+        </li>
+      </ul>
 
-  <p>
-    <a href="Link"></a>
-  </p>
-
-</body>
+      <p>
+        <a href="/CS_160/Apps/CalculatorApp.apk">Calculalor App Download for Android</a>
+      </p>
+    </div>
+  </body>
 
 </html>
