--- a/CS_160/RPS/index.html
+++ b/CS_160/RPS/index.html
@@ -13,7 +13,8 @@
   <h2>Beat the computer!</h2>
 
   <p>
-    <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/VibrantStupendousAddons?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+    <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/VibrantStupendousAddons?lite=true" scrolling="no" frameborder="no"
+      allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
   </p>
 
 </body>
