--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -14,6 +14,9 @@
         <li>
             <a href="/CS_160/RPS/index.html">ROCK PAPER SCISSORS</a>
           </li>
+          <li>
+            <a href="/CS_160/Portfolio Evaluation/index.html">Portfolio Evaluation</a>
+          </li>
       <li>
         <a href="Scratch Programs/index.html">Scratch Programs</a>
       </li>
