--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -17,6 +17,9 @@
           <li>
             <a href="/CS_160/Portfolio Evaluation/index.html">Portfolio Evaluation</a>
           </li>
+          <li>
+            <a href="Python Programs/index.html">Python Programs</a>
+          </li>
       <li>
         <a href="Scratch Programs/index.html">Scratch Programs</a>
       </li>
