--- a/CS_160/Portfolio Evaluation/index.html
+++ b/CS_160/Portfolio Evaluation/index.html
@@ -14,14 +14,10 @@
 
   <body class="index">
     <div id="main" role="main">
+
       <ul>
         <li>
-          <a href="/CS_160/Portfolio Evaluation/index.html">Midterm</a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href="/CS_160/Portfolio Evaluation/Midterm/index.html">App Videos</a>
+          <a href="/CS_160/Portfolio Evaluation/Midterm/index.html">Midterm</a>
         </li>
       </ul>
     </div>
