--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -12,7 +12,7 @@
     <h1>CS 160</h1>
     <ul>
         <li>
-            <a href="/CS_160/RPS/index.html">ROCK PAPER SCISSORS</a>
+            <a href="/CS_160/Python Programs/RPS/index.html">ROCK PAPER SCISSORS</a>
           </li>
           <li>
             <a href="/CS_160/Portfolio Evaluation/index.html">Portfolio Evaluation</a>
