--- a/CS_160/Python Programs/index.html
+++ b/CS_160/Python Programs/index.html
@@ -10,6 +10,13 @@
 <body class="index">
   <div id="main" role="main">
     <h1>Python Programs</h1>
+
+    <ul>
+      <li>
+        <a href="/CS_160/Python Programs/RPS/index.html">Midterm</a>
+      </li>
+    </ul>
+    
     <br/>
     <h2>Mileage</h2>
     <p>
