adding avg program

--- a/CS_160/Python Programs/index.html
+++ b/CS_160/Python Programs/index.html
@@ -13,15 +13,26 @@
 
     <ul>
       <li>
-        <a href="/CS_160/Python Programs/RPS/index.html">Midterm</a>
+        <a href="/CS_160/Python Programs/RPS/index.html">ROCK PAPER SCISSORS</a>
       </li>
     </ul>
-    
+
     <br/>
-    <h2>Mileage</h2>
     <p>
-      <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/AcceptableHalfDemoware?lite=true" scrolling="no" frameborder="no"
-        allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+      <h2>Mileage</h2>
+    </p>
+    <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/AcceptableHalfDemoware?lite=true" scrolling="no" frameborder="no"
+      allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+    <br/>
+    <p>
+      <h2>Average of Three Numbers</h2>
+    </p>
+    <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/LargeSevereSystems?lite=true" scrolling="no" frameborder="no"
+      allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+
+
+
+
   </div>
 </body>
 
