--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -16,6 +16,9 @@
             <a href="/CS_160/Portfolio Evaluation/index.html">Portfolio Evaluation</a>
           </li>
           <li>
+            <a href="Processing Programs/index.html">Processing Programs</a>
+          </li>
+          <li>
             <a href="Python Programs/index.html">Python Programs</a>
           </li>
       <li>
