More processing programs

--- a/CS_160/Processing Programs/index.html
+++ b/CS_160/Processing Programs/index.html
@@ -12,7 +12,10 @@
     <h1>Processing Programs</h1>
 <h2>Example</h2>
 <iframe src="https://editor.p5js.org/p5/embed/rkqGNeJXum"></iframe>
+<h2>Ellipse</h2>
+<iframe src="https://editor.p5js.org/p5/embed/rkqGNeJXum"></iframe>
 <h2>Creation</h2>
+<iframe src="https://editor.p5js.org/p5/embed/rkqGNeJXum"></iframe>
 
 
   </div>
