picture of rps?

--- a/CS_160/Python Programs/index.html
+++ b/CS_160/Python Programs/index.html
@@ -13,7 +13,7 @@
 
     <ul>
       <li>
-        <a href="/CS_160/Python Programs/RPS/index.html">ROCK PAPER SCISSORS</a>
+        <a href="/CS_160/Python Programs/RPS/rps pic.png">ROCK PAPER SCISSORS</a>
       </li>
     </ul>
 
