restructuring Python Programs

--- a/CS_160/Python Programs/index.html
+++ b/CS_160/Python Programs/index.html
@@ -13,29 +13,24 @@
 
     <ul>
       <li>
-        <a href="/CS_160/Python Programs/RPS/rps pic.png">ROCK PAPER SCISSORS</a>
+        <a href="/CS_160/Python Programs/RPS/rps pic.png"></a>
       </li>
     </ul>
-
-    <br/>
-    <p>
-      <h2>Mileage</h2>
-    </p>
-    <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/AcceptableHalfDemoware?lite=true" scrolling="no" frameborder="no"
-      allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
-    <br/>
-    <p>
-      <h2>Average of Three Numbers</h2>
-    </p>
-    <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/LargeSevereSystems?lite=true" scrolling="no" frameborder="no"
-      allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
-    <br/>
-    <p>
-      <h2>Largest of Three Numbers</h2>
-    </p>
-    <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/OddWelcomeDeletions?lite=true" scrolling="no" frameborder="no"
-      allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
-
+    <ul>
+      <li>
+        <a href="/CS_160/Python Programs/Avg3/index.html">Avg3</a>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="/CS_160/Python Programs/Big3/index.html">Big3</a>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="/CS_160/Python Programs/Mileage/index.html">Mileage</a>
+      </li>
+    </ul>
 
   </div>
 </body>
