--- a/CS_160/Python Programs/Big3/index.html
+++ b/CS_160/Python Programs/Big3/index.html
@@ -4,26 +4,13 @@
 <head>
   <meta charset="utf-8" />
   <link href="/screen.css" media="screen" rel="stylesheet" type="text/css" />
-  <title>Python Programs</title>
+  <title>Big3</title>
 </head>
 
 <body class="index">
   <div id="main" role="main">
-    <h1>Python Programs</h1>
+    <h1>Largest of Three Numbers</h1>
 
-    <ul>
-      <li>
-        <a href="/CS_160/Python Programs/RPS/rps pic.png">ROCK PAPER SCISSORS</a>
-      </li>
-    </ul>
-
-    <br/>
-    <p>
-      <h2>Mileage</h2>
-    </p>
-
-      <h2>Largest of Three Numbers</h2>
-    </p>
     <iframe height="400px" width="100%" src="https://repl.it/@Hazelnut09/OddWelcomeDeletions?lite=true" scrolling="no" frameborder="no"
       allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
 
