--- a/CS_160/Python Programs/index.html
+++ b/CS_160/Python Programs/index.html
@@ -13,7 +13,7 @@
 
     <ul>
       <li>
-        <a href="/CS_160/Python Programs/RPS/index.html">rps pic.png</a>
+        <a href="/CS_160/Python Programs/RPS/index.html"><img src="rps pic.png" alt="RPS" height="42" width="42"></a>
       </li>
     </ul>
     <ul>
