--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -11,7 +11,9 @@
   <div id="main" role="main">
     <h1>CS 160</h1>
     <ul>
-
+        <li>
+          <a href="/CS_160/Code HS/index.html">Code HS</a>
+        </li>
           <li>
             <a href="/CS_160/Portfolio Evaluation/index.html">Portfolio Evaluation</a>
           </li>
