--- a/CS_160/Python Programs/index.html
+++ b/CS_160/Python Programs/index.html
@@ -31,6 +31,22 @@
         <a href="/CS_160/Python Programs/Mileage/index.html">Mileage</a>
       </li>
     </ul>
+    <ul>
+      <li>
+        <a href="/CS_160/Python Programs/MasterMind/index.html">MasterMind</a>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="/CS_160/Python Programs/HangMan/index.html">HangMan</a>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <a href="/CS_160/Python Programs/BaseConverter/index.html">BaseConverter</a>
+      </li>
+    </ul>
+    
 
   </div>
 </body>
