--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -31,6 +31,9 @@
         <a href="/CS_160/Colleges/index.html">Colleges</a>
       </li>
       <li>
+        <a href="/CS_160/Readings/index.html">Readings</a>
+      </li>
+      <li>
         <a href="/CS_160/Code HS/index.html">Code HS</a>
       </li>
       <li>
