adding Inevitable Pain

--- a/CS_160/Readings/index.html
+++ b/CS_160/Readings/index.html
@@ -20,6 +20,10 @@
     <a href="https://docs.google.com/document/d/1Nit5QkDvM4XgJw8XRhEl9DBoPn_Qoo_8W7Afb95yroY/edit?usp=sharing">DevOps Summary</a>
   </p>
 
+  <p>
+    <a href="https://docs.google.com/document/d/1Ob317vmoHcxITk-EUb_kA8TgSs7SOCVklxt8U-nR1ZE/edit?usp=sharing">Inevitable Pain</a>
+  </p>
+
 </body>
 
 </html>
