--- a/CS_160/Readings/index.html
+++ b/CS_160/Readings/index.html
@@ -24,6 +24,10 @@
     <a href="https://docs.google.com/document/d/1Ob317vmoHcxITk-EUb_kA8TgSs7SOCVklxt8U-nR1ZE/edit?usp=sharing">Inevitable Pain</a>
   </p>
 
+  <p>
+    <a href="https://docs.google.com/document/d/1MVvRjXwGEjMF1hrCekRLRfLmMel8I1qlCMFj4_0EIH4/edit?usp=sharing">Software is Hard</a>
+  </p>
+
 </body>
 
 </html>
