--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -25,6 +25,9 @@
         <a href="Scratch Programs/index.html">Scratch Programs</a>
       </li>
       <li>
+        <a href="/CS_160/CODE Circuits/index.html">CODE Circuits</a>
+      </li>
+      <li>
         <a href="/CS_160/Book Answers/index.html">Book Answers</a>
       </li>
       <li>
