--- a/CS_160/CODE Circuits/index.html
+++ b/CS_160/CODE Circuits/index.html
@@ -12,8 +12,18 @@
   <h1>CODE Circuits</h1>
   <h2>Jing Video</h2>
 
+<!-- copy and paste. Modify height and width if desired. -->
+<object id="scPlayer"  width="805" height="615" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/690e8c23-d901-41d8-8ca2-0f22989bb795/jingswfplayer.swf" >
+  <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/690e8c23-d901-41d8-8ca2-0f22989bb795/jingswfplayer.swf" />
+  <param name="quality" value="high" />
+  <param name="bgcolor" value="#FFFFFF" />
+  <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/690e8c23-d901-41d8-8ca2-0f22989bb795/FirstFrame.jpg&containerwidth=805&containerheight=615&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/690e8c23-d901-41d8-8ca2-0f22989bb795/Level-triggered%20D-type%20flip-flop.swf&blurover=false" />
+  <param name="allowFullScreen" value="true" />
+  <param name="scale" value="showall" />
+  <param name="allowScriptAccess" value="always" />
+  <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/690e8c23-d901-41d8-8ca2-0f22989bb795/" />
+ </object>
 
-  
 </body>
 
 </html>
