--- a/CS_160/CODE Circuits/index.html
+++ b/CS_160/CODE Circuits/index.html
@@ -10,8 +10,9 @@
 <body>
 
   <h1>CODE Circuits</h1>
-  <h2>Jing Video</h2>
+  <h2>Jing Videos</h2>
 
+  <h2>Level-triggered D-type flip-flop</h2>
 <!-- copy and paste. Modify height and width if desired. -->
 <object id="scPlayer"  width="805" height="615" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/690e8c23-d901-41d8-8ca2-0f22989bb795/jingswfplayer.swf" >
   <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/690e8c23-d901-41d8-8ca2-0f22989bb795/jingswfplayer.swf" />
