--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -16,6 +16,12 @@
         <a href="/CS_160/Portfolio Evaluation/index.html">Portfolio Evaluation</a>
       </li>
       <li>
+        <a href="/CS_160/Final Exam/index.html">Final Exam</a>
+      </li>
+      <li>
+        <a href="/CS_160/Robot Treasure Hunt/index.html">Robot Treasure Hunt</a>
+      </li>
+      <li>
         <a href="Processing Programs/index.html">Processing Programs</a>
       </li>
       <li>
