--- a/CS_160/Portfolio Evaluation/index.html
+++ b/CS_160/Portfolio Evaluation/index.html
@@ -19,6 +19,9 @@
         <li>
           <a href="/CS_160/Portfolio Evaluation/Midterm/index.html">Midterm</a>
         </li>
+        <li>
+          <a href="/CS_160/Portfolio Evaluation/Final/index.html">Final</a>
+        </li>
       </ul>
     </div>
   </body>
