--- a/CS_160/index.html
+++ b/CS_160/index.html
@@ -43,6 +43,9 @@
         <a href="/CS_160/Readings/index.html">Readings</a>
       </li>
       <li>
+        <a href="/CS_160/Elements/index.html">Elements</a>
+      </li>
+      <li>
         <a href="/CS_160/Code HS/index.html">Code HS</a>
       </li>
       <li>
