--- a/CS_160/CODE Circuits/index.html
+++ b/CS_160/CODE Circuits/index.html
@@ -25,6 +25,19 @@
   <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/690e8c23-d901-41d8-8ca2-0f22989bb795/" />
  </object>
 
+  <h2>8 Bit With Everything Inside</h2>
+  <!-- copy and paste. Modify height and width if desired. -->
+ <object id="scPlayer"  width="1314" height="903" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/4b61c093-3497-40c0-8eea-01b8171307d0/jingswfplayer.swf" >
+  <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/4b61c093-3497-40c0-8eea-01b8171307d0/jingswfplayer.swf" />
+  <param name="quality" value="high" />
+  <param name="bgcolor" value="#FFFFFF" />
+  <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/4b61c093-3497-40c0-8eea-01b8171307d0/FirstFrame.jpg&containerwidth=1314&containerheight=903&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/4b61c093-3497-40c0-8eea-01b8171307d0/8%20Bit%20Adder.swf&blurover=false" />
+  <param name="allowFullScreen" value="true" />
+  <param name="scale" value="showall" />
+  <param name="allowScriptAccess" value="always" />
+  <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/4b61c093-3497-40c0-8eea-01b8171307d0/" />
+ </object>
+
 </body>
 
 </html>
