--- a/CS_160/CODE Circuits/index.html
+++ b/CS_160/CODE Circuits/index.html
@@ -25,7 +25,7 @@
   <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/690e8c23-d901-41d8-8ca2-0f22989bb795/" />
  </object>
 
-  <h2>8 Bit With Everything Inside</h2>
+  <h2>8 Bit Adder With Everything Inside</h2>
   <!-- copy and paste. Modify height and width if desired. -->
  <object id="scPlayer"  width="1314" height="903" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/4b61c093-3497-40c0-8eea-01b8171307d0/jingswfplayer.swf" >
   <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/4b61c093-3497-40c0-8eea-01b8171307d0/jingswfplayer.swf" />
