--- a/CS_160/CODE Circuits/index.html
+++ b/CS_160/CODE Circuits/index.html
@@ -38,6 +38,19 @@
   <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/4b61c093-3497-40c0-8eea-01b8171307d0/" />
  </object>
 
+  <h2>One's Complement</h2> 
+ <!-- copy and paste. Modify height and width if desired. -->
+ <object id="scPlayer"  width="1314" height="903" type="application/x-shockwave-flash" data="https://content.screencast.com/users/SkyDusk/folders/Jing/media/be17dc63-def6-4a98-9db0-1a4553eac07b/jingswfplayer.swf" >
+  <param name="movie" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/be17dc63-def6-4a98-9db0-1a4553eac07b/jingswfplayer.swf" />
+  <param name="quality" value="high" />
+  <param name="bgcolor" value="#FFFFFF" />
+  <param name="flashVars" value="thumb=https://content.screencast.com/users/SkyDusk/folders/Jing/media/be17dc63-def6-4a98-9db0-1a4553eac07b/FirstFrame.jpg&containerwidth=1314&containerheight=903&content=https://content.screencast.com/users/SkyDusk/folders/Jing/media/be17dc63-def6-4a98-9db0-1a4553eac07b/One%27s%20Complement.swf&blurover=false" />
+  <param name="allowFullScreen" value="true" />
+  <param name="scale" value="showall" />
+  <param name="allowScriptAccess" value="always" />
+  <param name="base" value="https://content.screencast.com/users/SkyDusk/folders/Jing/media/be17dc63-def6-4a98-9db0-1a4553eac07b/" />
+ </object>
+
 </body>
 
 </html>
